After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687666 - textoverlay: aborts when shading is enabled but not supported for the current video format
textoverlay: aborts when shading is enabled but not supported for the current...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.x
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-05 16:19 UTC by Christian Fredrik Kalager Schaller
Modified: 2012-11-06 23:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Test application (4.57 KB, text/x-python)
2012-11-05 16:19 UTC, Christian Fredrik Kalager Schaller
Details

Description Christian Fredrik Kalager Schaller 2012-11-05 16:19:14 UTC
Created attachment 228148 [details]
Test application

python proto.py 
going to playing
**
ERROR:gstbasetextoverlay.c:1662:gst_base_text_overlay_push_frame: code should not be reached
Aborted (core dumped)


I am getting the error above when trying to run attached python application.
Comment 1 Tim-Philipp Müller 2012-11-06 22:59:58 UTC
How about a GST_DEBUG=*:6 log (as always..) ?

It doesn't support shading for the negotiated format.
Comment 2 Tim-Philipp Müller 2012-11-06 23:45:41 UTC
commit a62650c9de79bcf93d6be34ecdcb51965e227895
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Tue Nov 6 23:38:13 2012 +0000

    textoverlay: don't abort if we don't know how to paint shaded background for a format
    
    It's not a very nice thing to do.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687666