textoverlay: don't abort if we don't know how to paint shaded background for a format

It's not a very nice thing to do.

https://bugzilla.gnome.org/show_bug.cgi?id=687666